# mailchimp-trends-engine

./: .gitignore  .pylintrc  Makefile  README.md  cspell.json  pnpm-workspace.yaml
.github/workflows/: get-version.yml  publish.yml  tests.yml
ai/: epic-1_story-1.1_project-scaffolding-monorepo-setup.md  epic-1_story-1.2_backend-fastapi-app-setup.md  epic-1_story-1.3_frontend-nextjs-app-setup.md  epic-1_story-1.4_local-orchestration-and-connectivity.md  epic-1_story-1.6_testing-framework-and-ci-integration.md  epic-2_story-2.1_configure-news-sources-jina-reader-integration.md  epic-2_story-2.3_raw-content-storage-preliminary.md  epic-2_story-2.4_mock-data-ingestion-plugin-refinement.md  epic-3_story-3.3_basic-sentiment-analysis.md  epic-3_story-3.5_trend-identification-algorithm-mvp.md  epic-4_story-4.2_trend-display-with-key-information.md  epic-4_story-4.3_trend-filtering-basic.md  epic-4_story-4.5_frontend-unit-integration-tests-dashboard.md  epic-5_story-5.1_backend-llm-integration-claude-setup.md  epic-5_story-5.2_claude-powered-marketing-content-generation.md  epic-5_story-5.3_frontend-ui-for-llm-content-display.md  epic-5_story-5.4_e2e-mvp-testing-and-polish.md
ai/agile/: epic-1_story-1.1_project-scaffolding-monorepo-setup.md  epic-1_story-1.2_backend-fastapi-app-setup.md  epic-1_story-1.3_frontend-nextjs-app-setup.md  epic-1_story-1.4_local-orchestration-and-connectivity.md  epic-1_story-1.5_basic-ci-cd-pipeline.md  epic-1_story-1.6_testing-framework-and-ci-integration.md  epic-2_story-2.1_configure-news-sources-jina-reader-integration.md  epic-2_story-2.2_scheduled-or-triggered-article-fetching.md  epic-2_story-2.3_raw-content-storage-preliminary.md  epic-2_story-2.4_mock-data-ingestion-plugin-refinement.md  epic-3_story-3.1_basic-nlp-preprocessing.md  epic-3_story-3.2_topic-extraction-modeling.md  epic-3_story-3.3_basic-sentiment-analysis.md  epic-3_story-3.4_marketing-relevance-assessment.md  epic-3_story-3.5_trend-identification-algorithm-mvp.md  epic-4_story-4.1_basic-dashboard-layout-api-connection.md  epic-4_story-4.2_trend-display-with-key-information.md  epic-4_story-4.3_trend-filtering-basic.md  epic-4_story-4.4_time-series-visualization-trend-evolution.md  epic-4_story-4.5_frontend-unit-integration-tests-dashboard.md  epic-5_story-5.1_backend-llm-integration-claude-setup.md  epic-5_story-5.2_claude-powered-marketing-content-generation.md  (+2 more)
ai/tools/: extract_stories.py
assets/: MC_50-50_-_Brand_Assets_02.avif  README.md  mockup.html
backend/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  server.py
backend/app/: __about__.py  server.py
backend/app/api/v1/routers/: data_ingestion.py
backend/app/core/: config.py
backend/app/data_ingestion/: jina_ai_service.py  scheduler.py
backend/tests/: conftest.py  test_server.py  test_server_main_mock.py
backend/tests/integration/data_ingestion/: test_jina_ai_service_integration.py
backend/tests/unit/: test_app_config.py  test_server_main.py
backend/tests/unit/api/: test_data_ingestion_router.py  test_health_endpoint.py
backend/tests/unit/data_ingestion/: test_jina_ai_service.py  test_scheduler.py  test_scheduler_lifecycle.py
docs/: architecture-review.md  architecture.md  frontend-architecture.md  kubernetes-setup.md  master-checklist.md  pm-checlist.md  prd.md  project-brief.md  ui-ux-spec.md
frontend/: .env.local.example  .gitignore  Dockerfile  Makefile  README.md  eslint.config.mjs  jest.config.cjs  jest.setup.ts  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
kubernetes/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml
(+6 files in other folders)
